[package]
name = "vault"
version = "0.1.1"
edition = "2021"
resolver = "1"

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.38"
clippers = "0.1.2"
eframe = "0.28.1"
hex = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
uuid = { version = "1.9.1", features = ["v4"] }
